<resources>
    <string name="app_name">PopFlix</string>
    <string name="action_settings">Settings</string>'
    <string name="tmdb_base_uri">http://api.themoviedb.org/3</string>
    <string name="discover_tag">discover</string>
    <string name="movie_tag">movie</string>
    <string name="api_key">630c07fa3fa86475de3cf0cd80027814</string>
    <string name="minutes">min</string>
    <string name="no_overview">No overview available</string>
    <string name="poster_base_path">http://image.tmdb.org/t/p</string>
    <string name="grid_poster_size">/w185</string>
    <string name="detail_poster_size">/w342</string>
    <string name="title_activity_detail">Movie Details</string>
    <string name="popularity_sort">popularity.desc</string>
    <string name="ratings_sort">vote_average.desc</string>
    <string name="now_showing_sort">now_playing</string>
    <string name="top_rated_sort">top_rated</string>
    <string name="earnings_sort">revenue.desc</string>
    <string name="newest_sort">primary_release_date.desc</string>
    <string name="details_base_path">http://api.themoviedb.org/3/movie/</string>
    <string name="most_popular">Most Popular First</string>
    <string name="now_showing">Now Showing</string>
    <string name="highest_rated">Highest Rated First</string>
    <string name="highest_grossing">Highest Grossing First</string>
    <string name="favorites">Favorites</string>
    <string name="no_connect_string">"No connectivity! Please check your internet connection.</string>
    <string name="connectionErrorString">Error receiving data from server! DO NOT PANIC!</string>
    <string name="synopsis">Overview</string>
    <string name="reviews">Reviews</string>
    <string name="dialog_close">Close</string>
    <string name="review">Review</string>
    <string name="overview">Overview</string>
    <string name="no_review_text">No reviews available for this movie!</string>
    <string name="no_trailer_text">No trailers available for this movie!</string>
    <string name="appendAttr">trailers,credits</string>
    <string name="youtube_base_uri">https://www.youtube.com/watch?v=</string>
    <string name="cast_profile_baseURI">http://image.tmdb.org/t/p/w185/</string>
    <string name="trailers">Trailers</string>
    <string name="cast">Cast</string>
    <string name="imdbId">imdb_id</string>
    <string name="imdb_base_uri">http://imdb.com/name/</string>
    <string name="share_movie">Share</string>
    <string name="share_base_string_1">Hey there! Check out this awesome trailer </string>
    <string name="share_base_string_2"> from the movie </string>
    <string name="share_base_string3">#PopFlix</string>
    <string name="no_share_text">No trailers available to share.</string>
    <string name="no_detals_text">No details available for this cast member.</string>
    <string name="no_fav_text">No favorites to display</string>
    <string name="fav_add_success">Added to favorites</string>
    <string name="fav_add_failure">Some weird error occurred.</string>
    <string name="fav_remove_success">Removed from favorites</string>
    <string name="progress_text_detail">"Loading details .."</string>
    <string-array name="progress_text_detail">
        <item>Quietening Velociraptors..</item>
        <item>Lining up Minions..</item>
        <item>Starting up Batmobile..</item>
        <item>Landing on Mars..</item>
        <item>Briefing James Bond..</item>
        <item>Adding weird movies..</item>
        <item>Reaching the summit..</item>
        <item>Switching avatars..</item>
        <item>Waking up Hagrid..</item>
        <item>Hiding MY precious..</item>
        <item>Assembling the Avengers..</item>
        <item>Capturing the Black Pearl..</item>
    </string-array>
    <string name="poster_image_desc">Poster image for a movie</string>
    <string name="rating_image_desc">Image for ratings</string>
    <string name="grid_item_image_desc">Grid item image</string>
    <string name="grid_position">gridPosition</string>
    <string name="swipe_position">swipePosition</string>
    <string name="parse_array_key">parseArray</string>
    <string name="clear_fav">Do you want to clear all the favorites?</string>
    <string name="yes_clear">Yes</string>
    <string name="no_clear">No</string>
    <string name="clear_fav_title">Woah there!</string>
    <string-array name="menu_options">
        <item>Dummy</item>
        <item>Clear Favorites</item>
    </string-array>
    <string name="all_fav_cleared">All favorites are cleared.</string>
</resources>
