<?xml version="1.0" encoding="utf-8"?>

<com.nirhart.parallaxscroll.views.ParallaxScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/detail_scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:alpha_factor="1.4"
    app:parallax_factor="1.9">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/frame_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/movie_backdrop_layout"
            android:layout_width="fill_parent"
            android:layout_height="200dp"
            android:orientation="horizontal" />

        <LinearLayout
            android:id="@+id/port_title_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/movie_backdrop_layout"
            android:background="@color/indigo_300"
            android:elevation="5dp"
            android:outlineProvider="bounds"
            android:paddingBottom="15dp"
            android:paddingTop="15dp">

            <TextView
                android:id="@+id/movie_title_detail"
                style="@android:style/TextAppearance.Material.Display3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:alpha="0.85"
                android:gravity="center"
                android:textColor="@color/primary_dark_material_dark"
                android:textSize="20sp" />
        </LinearLayout>


        <ImageView
            android:id="@+id/movie_image_detail"
            android:layout_width="120dp"
            android:layout_height="180dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/port_title_layout"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="30dp"
            android:cropToPadding="true"
            android:elevation="5dp"
            android:outlineProvider="bounds" />

        <com.melnykov.fab.FloatingActionButton
            android:id="@+id/movie_fav_fab"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/ratings_layout"
            android:layout_marginTop="20dp"
            android:layout_alignStart="@+id/movie_date_detail"
            android:src="@drawable/ic_favorite_small"
            app:fab_colorNormal="@color/white_common"
            app:fab_colorPressed="@color/yellow_A400"
            app:fab_type="mini" />

        <TextView
            android:id="@+id/movie_date_detail"
            style="@android:style/TextAppearance.Material.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@+id/movie_image_detail"
            android:layout_marginLeft="30dp"
            android:layout_toEndOf="@id/movie_image_detail"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <View
            android:id="@+id/detail_divider"
            style="?android:listDivider"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/movie_image_detail"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="25dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/synopis_text"
            style="@android:style/TextAppearance.Material.Medium"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/detail_divider"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
            android:alpha="0.85"
            android:gravity="center"
            android:text="@string/synopsis"
            android:textColor="@color/primary_dark_material_dark" />

        <TextView
            android:id="@+id/movie_time_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/movie_date_detail"
            android:layout_below="@+id/movie_date_detail"
            android:layout_marginTop="20dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="italic" />

        <LinearLayout
            android:id="@+id/ratings_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/movie_time_detail"
            android:layout_below="@+id/movie_time_detail"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/move_rating_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <ImageView
                android:id="@+id/starImage"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:elevation="8dp" />

        </LinearLayout>

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/overview_card_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/detail_divider"
            android:layout_alignEnd="@+id/detail_divider"
            android:layout_marginTop="15dp"
            android:layout_below="@+id/synopis_text"
            card_view:cardElevation="2sp"
            card_view:cardUseCompatPadding="true">

            <TextView
                android:id="@+id/movie_description_detail"
                style="@android:style/TextAppearance.Material.Display2"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp" />

        </android.support.v7.widget.CardView>

        <View
            android:id="@+id/review_divider"
            style="?android:listDivider"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/overview_card_view"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="25dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/review_title_text"
            style="@android:style/TextAppearance.Material.Medium"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/review_divider"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
            android:alpha="0.85"
            android:gravity="center"
            android:text="@string/reviews"
            android:textColor="@color/primary_dark_material_dark" />

        <LinearLayout
            android:id="@+id/review_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignStart="@+id/movie_image_detail"
            android:layout_below="@id/review_title_text"
            android:layout_marginTop="15dp"
            android:orientation="vertical" />


        <View
            android:id="@+id/cast_divider"
            style="?android:listDivider"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/review_layout"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="25dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/cast_title_text"
            style="@android:style/TextAppearance.Material.Medium"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/cast_divider"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="2dp"
            android:alpha="0.85"
            android:gravity="center"
            android:text="@string/cast"
            android:textColor="@color/primary_dark_material_dark" />


        <android.support.v7.widget.RecyclerView
            android:id="@+id/cast_list_view"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_below="@+id/cast_title_text"
            android:layout_marginTop="10dp" />

        <View
            android:id="@+id/trailer_divider"
            style="?android:listDivider"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/cast_list_view"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="25dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/trailer_title_text"
            style="@android:style/TextAppearance.Material.Medium"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/trailer_divider"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="2dp"
            android:alpha="0.85"
            android:gravity="center"
            android:text="@string/trailers"
            android:textColor="@color/primary_dark_material_dark" />

        <LinearLayout
            android:id="@+id/trailer_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignStart="@+id/movie_image_detail"
            android:layout_below="@id/trailer_title_text"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="15dp"
            android:orientation="vertical" />

    </RelativeLayout>
</com.nirhart.parallaxscroll.views.ParallaxScrollView>